<resources>
    <string name="app_name">Battery Booster</string>

    <string name="optimise_button_text">Optimise</string>
    <string name="advancedButtonText">Advanced</string>
    <string name="battery_issues_text">%1$d battery issue(s)</string>
    <string name="optimsed_text">Battery optimised!</string>

    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="log">Log</string>
    <string name="clearLog">Clear Log</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>

    <string name="usageAccessButtonText">Enable app to monitor device usage</string>
    <string name="overlayPermButtonText">Enable app to display over other apps</string>
    <string name="writeSystemSettings">Enable app to access OS settings</string>
    <string name="no_data">No data yet!</string>

    <string name="fileStoragePermissionWarning">
        App needs file storage access to read security level!
    </string>
    <string name="storagePermissionAcquired">Storage permission acquired!</string>
    <string name="log_cleared">Log cleared!</string>

    <string name="chargeLevelTitle">Charge Level:</string>
    <string name="chargeLevelText">58.68%</string>
    <string name="estimatedBatteryTimeTitle">Estimated battery time left:</string>
    <string name="estimatedBatteryTimeText">4h 33min</string>
    <string name="estimatedChargingTimeTitle">Estimated charging time:</string>
    <string name="estimatedChargingTimeText">03h 18min</string>

    <string name="specifiedCapacityTitle">Specified capacity</string>
    <string name="specifiedCapacityText">3000 mAh</string>
    <string name="estimatedCapacityTitle">Estimated capacity</string>
    <string name="estimatedCapacityText">2324 mAh</string>
    <string name="currentCapacityTitle">Current capacity</string>
    <string name="currentCapacityText">1363 mAh</string>
    <string name="electricCurrentTitle">Electric Current</string>
    <string name="electricCurrentText">-227.00 mA</string>

    <string-array name="broadcastTheftMITMFlags">
        <item>Hello there!</item>
        <item>
            Did you ever hear the tragedy of Darth Plagueis The Wise? I thought not. It’s not a
            story the Jedi would tell you. It’s a Sith legend. Darth Plagueis was a Dark Lord of the
            Sith, so powerful and so wise he could use the Force to influence the midichlorians to
            create life… He had such a knowledge of the dark side that he could even keep the ones
            he cared about from dying. The dark side of the Force is a pathway to many abilities
            some consider to be unnatural. He became so powerful… the only thing he was afraid of
            was losing his power, which eventually, of course, he did. Unfortunately, he taught his
            apprentice everything he knew, then his apprentice killed him in his sleep. Ironic. He
            could save others from death, but not himself.
        </item>
    </string-array>
</resources>