<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/specifiedCapacityHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"

        android:text="@string/specifiedCapacityTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/specifiedCapacityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"

        android:text="@string/specifiedCapacityText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specifiedCapacityHeading" />

    <TextView
        android:id="@+id/estimatedCapacityHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"

        android:text="@string/estimatedCapacityTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specifiedCapacityText" />

    <TextView
        android:id="@+id/estimatedCapacityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"

        android:text="@string/estimatedCapacityText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estimatedCapacityHeading" />

    <TextView
        android:id="@+id/currentCapacityHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"

        android:text="@string/currentCapacityTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estimatedCapacityText" />

    <TextView
        android:id="@+id/currentCapacityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"

        android:text="@string/currentCapacityText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCapacityHeading" />

    <TextView
        android:id="@+id/electricCurrentHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"

        android:text="@string/electricCurrentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCapacityText" />

    <TextView
        android:id="@+id/electricCurrentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"

        android:text="@string/electricCurrentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/electricCurrentHeading" />

</androidx.constraintlayout.widget.ConstraintLayout>